--- a/submit.html
+++ b/submit.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<form class="content" action="https://api.web3forms.com/submit" method="POST">
+<form class="content" action="https://submit-form.com/eELisAZ5o" method="POST">
 
 <input type="hidden" name="access_key" value="eb7e26cf-fb09-485e-9dc4-44cbe6050e54">
 
